Updated several issues reported by the "Findbugs" tool.